--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,37 +25,42 @@
 
 body {
     font-family: 'Roboto Condensed', sans-serif;
-    width: 100vw;
-    height: 100vh;
+    width: 75vw;
+    height: 75vh;
     // background-color: rgb(92, 92, 100);
     // background: radial-gradient(#969599, #313646);
     background: radial-gradient(ellipse at top, #ee5a2d, transparent),
                 radial-gradient(ellipse at right, #0c9df7, transparent),
                 radial-gradient(ellipse at bottom, #0c9df7, transparent),
                 radial-gradient(ellipse at left, #ee5a2d, transparent),;
-}
-
-/* logo */
-.logo {
-    flex-grow: 1;
-}
-.logo img {
-    width: 100px;  
+    display: block;
+    justify-content: center;
+    align-content: center;
+    
+    header {
+        // logo
+        div {
+            width: 20vw;
+            img {
+                width: 120px;
+            }
+        }
+    }
 }
 
 /* Menu */
 header {
+    width: 100vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
-header nav {
-    flex-grow: 2;
-}
+
 header nav ul {
     display: flex;
     justify-content: space-around;
-    
+    width: 50vw;
 }
 header nav ul li {
     display: inline;
@@ -79,6 +84,40 @@ a:hover {
   text-decoration: chocolate;
 }
 
-.myworks ul li img {
-    width: 35rem;
+// .main-container article {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
+
+/*  Main   */
+.main-container {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    article {
+        height: 62vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+  }
+
+.myworks {
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    div {
+        width: 40rem;
+        text-align: center;
+        img {
+            width: 35rem;
+            height: 19rem;
+            border: 2px #ee5a2d solid;
+            border-radius: 3%;
+        };
+    }
 }
