--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,8 +25,8 @@
 
 body {
     font-family: 'Roboto Condensed', sans-serif;
-    width: 75vw;
-    height: 75vh;
+    width: 100vw;
+    height: 90vh;
     // background-color: rgb(92, 92, 100);
     // background: radial-gradient(#969599, #313646);
     background: radial-gradient(ellipse at top, #ee5a2d, transparent),
@@ -98,14 +98,27 @@ a:hover {
     justify-content: center;
     flex-direction: column;
     article {
-        height: 62vh;
+        height: 85vh;
         display: flex;
         justify-content: center;
         align-items: center;
     }
   }
 
-.myworks {
+#about {
+    position: relative;
+    img {
+        width: 50rem;
+    }
+    .social-btn {
+        position: absolute;
+        left: 0;
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+    }
+}
+
+#skills {
     flex-wrap: wrap;
     display: flex;
     justify-content: space-evenly;
@@ -113,7 +126,21 @@ a:hover {
     div {
         width: 40rem;
         text-align: center;
-        
+        img {
+            width: 5rem;
+            height: 5.5rem;
+        }
+    }
+}
+
+#myworks {
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    div {
+        width: 40rem;
+        text-align: center;
         img {
             width: 35rem;
             height: 19rem;
@@ -122,3 +149,34 @@ a:hover {
         };
     }
 }
+
+/* footer */
+footer {
+    width: 100vw;
+    height: 15vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--company-them-bg-color);
+  }
+  footer ul {
+    margin-bottom: 1%;
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  footer ul li {
+    display: inline;
+  }
+  footer hr {
+    width: 100%;
+  }
+  footer div {
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
