--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -105,8 +105,9 @@ a:hover {
     }
   }
 
-#about {
+#intro {
     position: relative;
+    height: 80vh;
     img {
         width: 50rem;
     }
@@ -118,18 +119,54 @@ a:hover {
     }
 }
 
+#about {
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    // height: 85vh;
+    div {
+        width: 25rem;
+        text-align: center;
+        img {
+            width: auto;
+            height: 15rem;
+            border-radius: 25px;
+            box-shadow: 5px 5px 15px rgb(167, 164, 164)
+        };
+    }
+}
+
 #skills {
+    height: 95vh;
     flex-wrap: wrap;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     div {
-        width: 40rem;
+        width: 35rem;
         text-align: center;
         img {
-            width: 5rem;
-            height: 5.5rem;
+            width: 4.5rem;
+            height: 4.5rem;
         }
+    }
+    .tools {
+        width: 45rem;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: space-between;
+        div {
+            width: 6rem;
+            height: 6rem;
+            border-radius: 25px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            box-shadow: 5px 5px 15px rgb(167, 164, 164)
+        }
+        
     }
 }
 
@@ -138,6 +175,7 @@ a:hover {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    // height: 85vh;
     div {
         width: 40rem;
         text-align: center;
@@ -153,12 +191,11 @@ a:hover {
 /* footer */
 footer {
     width: 100vw;
-    height: 15vh;
+    height: 22vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background-color: var(--company-them-bg-color);
   }
   footer ul {
     margin-bottom: 1%;
