--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,8 +36,8 @@ body {
     align-content: center;
 }
 
-/* Anchor links */
-/* header */
+// Anchor links
+// header
 a,
 a:visited,
 a:link {
@@ -52,14 +52,13 @@ a:hover {
   transform: scale(2);
 }
 
-/* Logo & Menu */
+// Logo & Menu
 header {
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-
     // logo
     div {
         width: 20vw;
@@ -87,7 +86,7 @@ header {
     }
 }
 
-/*  Main   */
+// Main
 .main-container {
     width: 100vw;
     display: flex;
@@ -102,6 +101,7 @@ header {
     }
   }
 
+// Home
 #intro {
     position: relative;
     height: 77vh;
@@ -114,7 +114,7 @@ header {
             border-radius: 5px;
             padding: 2px;
             font-size: smaller;
-            font-weight:normal;
+            font-weight: normal;
         }
         a:hover {
             border-color: orange;
@@ -132,6 +132,7 @@ header {
     }
 }
 
+// About
 #about {
     flex-wrap: wrap;
     display: flex;
@@ -145,11 +146,18 @@ header {
             width: auto;
             height: 15rem;
             border-radius: 25px;
-            box-shadow: 5px 5px 15px rgb(167, 164, 164)
-        };
+            box-shadow: 5px 5px 15px rgb(167, 164, 164);
+            filter: grayscale(1);
+        }
+        img:hover {
+            width: auto;
+            height: 18rem;
+            filter: grayscale(0);
+        }
     }
 }
 
+// Skills
 #skills {
     height: 90vh;
     flex-wrap: wrap;
@@ -170,25 +178,35 @@ header {
         display: flex;
         justify-content: space-between;
         div {
-            width: 6rem;
+            width: 5.6rem;
             height: 6rem;
             border-radius: 25px;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             background-color: white;
-            box-shadow: 5px 5px 15px rgb(167, 164, 164)
+            box-shadow: 5px 5px 15px rgb(167, 164, 164);
+            a {
+                color: transparent;
+                font-weight: normal;
+                text-transform: none;
+            }
+            a:hover{
+                font-weight: bold;
+                text-transform: none;
+                color: black;
+            }
         }
-        
     }
 }
 
+// Portfolio
 #myworks {
     flex-wrap: wrap;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 90vh;
+    height: 89.8vh;
     div {
         width: 40rem;
         text-align: center;
@@ -196,12 +214,86 @@ header {
             width: 35rem;
             height: 19rem;
             border-radius: 25px;
-            box-shadow: 5px 5px 15px rgb(167, 164, 164)
-        };
+            box-shadow: 5px 5px 15px rgb(167, 164, 164);
+        }
+        img:hover {
+            width: 38rem;
+            height: auto;
+        }         
     }
 }
 
-/* footer */
+// Contact
+#contact {
+    width: 50vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .contactme {
+        width: auto;
+        height: 30vh;
+        flex-direction: column;
+        display: flex;
+        justify-content: space-between;
+        h3 {
+            width: 5rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        div {
+            width: 5rem;
+            display: flex;
+            justify-content: space-between;
+        }
+        a i:hover {
+            color: orange;
+        }
+    }
+    form {
+        height: 40vh;
+        flex-direction: column;
+        display: flex;
+        justify-content: space-between;
+        padding: 30px;
+        border: 1px black solid;
+        border-radius: 15px;
+        input {
+            border: none;
+            border-radius: 5px;
+            width: 100%;
+        }
+        button {
+            width: 100%;
+            height: 40px;
+            background-color: orange;
+            border-radius: 5px;
+            border: none;
+            font-weight: bold;
+        } 
+    }
+}
+
+// Go to top button
+#myBtn {
+    position: fixed;
+    bottom: 120px;
+    right: 30px;
+    z-index: 99;
+    border: 1px orange solid;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+    
+  }
+  #myBtn:hover {
+    background-color: orange;
+  }
+
+// Footer
 footer {
     width: 100vw;
     height: 16vh;
@@ -209,24 +301,16 @@ footer {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-  }
-  footer ul {
-    margin-bottom: 1%;
-    width: 50%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-  footer ul li {
-    display: inline;
-  }
-  footer hr {
-    width: 100%;
-  }
-  footer div {
-    margin-top: 2%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
+    hr {
+        width: 100%;
+    }
+    div {
+        margin-top: 2%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+  
+  
