--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -108,6 +108,9 @@ header {
     img {
         width: 50rem;
     }
+    img:hover {
+        width: 55rem;
+    }
     .main-intro {
         a {
             border: 1px black solid;
@@ -287,7 +290,6 @@ header {
     padding: 15px;
     border-radius: 10px;
     font-size: 18px;
-    
   }
   #myBtn:hover {
     background-color: orange;
